grid over 2 years